Add state reading and improve BLE protocol reliability (v0.1.1)
## New Features
- Add read_state() method to read actual device state from characteristics
- Add refresh_state() method to sync local state with device
- Add interactive CLI tool (lampster_cli.py) with debug logging
- Add device enumeration script (tests/test_device_info.py)

## Protocol Improvements
- Fix RGB/WHITE color setting: write color data BEFORE mode switch
- Fix power off from RGB mode: switch to WHITE mode first
- Improve timing: 0.4s after MODE writes, 0.2s after color writes
- Only send POWER_ON when device is actually off (avoid rejections)

## Device Discovery
- Identified device: LA-2017B by "The Lampster, the licitatie"
- Documented actual BLE characteristics and command sequences
- Verified read capability on MODE, RGB, and WHITE characteristics

## CLI Features
- Persistent debug logging across sessions (config.json)
- Separate menus for disconnected/connected states
- Looping color/white selection menus (ESC to exit)
- Auto-select single discovered device
- Debug logs saved to ./debug/ directory

## Bug Fixes
- Fix "Writing is not permitted" errors during color changes
- Fix "dim green" residual state after power off
- Fix RGB colors not actually changing on device
- Prevent duplicate device discoveries

Closes issues with BLE timing and state synchronization.

--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,11 @@ env/
 htmlcov/
 tests/debug/
 
+# Debug logs
+debug/
+
+# CLI config
+config.json
+
 # Home Assistant
 custom_components/**/__pycache__/
